# tetrix-hacaton

./: .gitignore  CMakeLists.txt  README.md  main.cc
data/: faces.yaml
include/: test.hh
src/: FaceRecognition.cc  Network.hh  database.cxx  database.hh
src/web_ui/: Untitled1.ipynb  app.py  communicate.py  requirements.txt
src/web_ui/env2/: pip-selfcheck.json
src/web_ui/static/: style.css
src/web_ui/templates/: table.html
